<resources>
    <string name="app_name">SpotifyTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="log_into_spotify">Log Into Spotify</string>
    <string name="find_a_origin">Find a origin...</string>
    <string name="make_a_blank_playlist">Make a Blank Playlist</string>
    <string name="go_to_playlist">Go To Playlist</string>
    <string name="find_a_destination">Find a Destination...</string>
    <string name="find_distance">find distance!</string>
    <string name="username">Username</string>
    <string name="take_picture">Take Picture</string>
</resources>