<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LiLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    android:backgroundTint="@color/colorPrimaryDark"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:paddingBottom="10dp"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textColor="@color/browser_actions_bg_grey" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@color/browser_actions_bg_grey" />

</LinearLayout>
