<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:paddingBottom="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/pbLoadingRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cameraButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/take_picture"
        android:textColor="@color/browser_actions_bg_grey" />

    <ImageView
        android:id="@+id/imageTakenRegister"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="160dp"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/registerButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@color/cardview_light_background" />

</LinearLayout>
